assn03/parser.output
State 13 conflicts: 1 shift/reduce
State 21 conflicts: 1 reduce/reduce
State 22 conflicts: 7 shift/reduce, 1 reduce/reduce
State 24 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 53 conflicts: 8 shift/reduce, 1 reduce/reduce
State 95 conflicts: 3 shift/reduce
State 97 conflicts: 1 shift/reduce
State 102 conflicts: 7 shift/reduce, 3 reduce/reduce
State 106 conflicts: 1 shift/reduce
State 108 conflicts: 2 shift/reduce
State 119 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 160 conflicts: 1 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 1 shift/reduce
State 176 conflicts: 1 shift/reduce
State 177 conflicts: 2 shift/reduce
State 180 conflicts: 2 shift/reduce
State 188 conflicts: 1 shift/reduce
State 208 conflicts: 7 shift/reduce
State 211 conflicts: 3 shift/reduce
State 222 conflicts: 1 shift/reduce
State 229 conflicts: 7 shift/reduce, 2 reduce/reduce
State 235 conflicts: 8 shift/reduce, 1 reduce/reduce
State 248 conflicts: 1 shift/reduce
State 249 conflicts: 7 shift/reduce
State 251 conflicts: 8 shift/reduce, 3 reduce/reduce
State 259 conflicts: 8 shift/reduce, 1 reduce/reduce
State 260 conflicts: 7 shift/reduce, 1 reduce/reduce
State 280 conflicts: 7 shift/reduce, 3 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENT decl_part body

    2 $@1: %empty

    3 program: PROGRAM error $@1 decl_part body

    4 decl_part: %empty
    5          | varaibledecl decl_part

    6 $@2: %empty

    7 decl_part: decl_part error $@2 decl_part body
    8          | procedure decl_part
    9          | function decl_part

   10 body: BEGINN statement END
   11     | BEGINN stat END

   12 $@3: %empty

   13 body: error $@3 statement END

   14 stat: %empty
   15     | statement stat

   16 varaibledecl: IDENT COLON TYPE

   17 $@4: %empty

   18 varaibledecl: IDENT error $@4 COLON TYPE
   19             | IDENT COMMA varaibledecl
   20             | IDENT EQ TYPE

   21 TYPE: simpleType
   22     | IDENT
   23     | ICONST
   24     | ARRAY LBRACK INDEX RBRACK OF TYPE
   25     | RECORD fieldlist END

   26 $@5: %empty

   27 TYPE: TYPE error $@5 TYPE

   28 procedure: PROCEDURE IDENT LPAREN RPAREN decl_part body

   29 $@6: %empty

   30 procedure: PROCEDURE IDENT LPAREN error $@6 RPAREN decl_part body
   31          | PROCEDURE IDENT LPAREN paramter RPAREN decl_part body

   32 paramter: IDENT COLON parametertype
   33         | AMP paramter
   34         | IDENT COMMA paramter
   35         | AMP IDENT paramter
   36         | paramter SEMI paramter
   37         | PROCEDURE IDENT LPAREN paramter RPAREN decl_part body

   38 $@7: %empty

   39 paramter: paramter error $@7 RPAREN decl_part body

   40 parametertype: simpleType
   41              | IDENT

   42 simpleType: INT
   43           | FLOAT
   44           | BOOL

   45 $@8: %empty

   46 simpleType: simpleType error $@8 decl_part body

   47 INDEX: ICONST COLON ICONST
   48      | ICONST COLON ICONST COMMA INDEX

   49 fieldlist: IDENT COLON TYPE
   50          | IDENT COMMA fieldlist
   51          | IDENT fieldlist

   52 function: FUNCTION IDENT LPAREN paramter RPAREN COLON simpleType decl_part body
   53         | FUNCTION IDENT LPAREN RPAREN COLON simpleType decl_part body

   54 $@9: %empty

   55 function: function error $@9 simpleType decl_part body

   56 statement: %empty
   57          | assignment
   58          | subroutinecall
   59          | return
   60          | for
   61          | while
   62          | if
   63          | read
   64          | write

   65 assignment: variable EQ exprssion

   66 $@10: %empty

   67 assignment: variable error $@10 EQ exprssion

   68 subroutinecall: IDENT LPAREN RPAREN
   69               | IDENT LPAREN exprssion RPAREN
   70               | IDENT LPAREN exprssion COMMA subroutinecall

   71 return: RETURN exprssion

   72 for: FOR IDENT IN exprssion COLON exprssion statement END
   73    | FOR IDENT IN exprssion COLON exprssion statement stat END

   74 while: WHILE LPAREN exprssion RPAREN statement END
   75      | WHILE LPAREN exprssion RPAREN statement stat END

   76 if: IF LPAREN exprssion RPAREN THEN statement END
   77   | IF LPAREN exprssion RPAREN THEN statement stat END
   78   | IF LPAREN exprssion RPAREN THEN stat elif END
   79   | IF LPAREN exprssion RPAREN THEN stat else END
   80   | IF LPAREN exprssion RPAREN THEN stat elif else END

   81 else: ELSE stat

   82 elif: ELIF LPAREN exprssion RPAREN THEN stat
   83     | ELIF LPAREN exprssion RPAREN THEN stat elif

   84 write: WRITE LPAREN SCONST RPAREN
   85      | write SCONST exprloop RPAREN

   86 exprloop: COMMA exprssion exprloop
   87         | %empty

   88 read: READ LPAREN SCONST COMMA exprloop RPAREN

   89 exprssion: and
   90          | and DBAR and
   91          | ICONST
   92          | IDENT PLUS IDENT

   93 and: logic
   94    | logic DAMP logic

   95 logic: simple
   96      | simple GT simple
   97      | simple GE simple
   98      | simple ASGN simple
   99      | simple NE simple
  100      | simple LE simple
  101      | simple LT simple

  102 simple: PLUS term
  103       | MINUS term
  104       | simple condition

  105 condition: PLUS
  106          | MINUS term condition

  107 term: factor
  108     | factor termcond

  109 termcond: STAR factor
  110         | DIV factor

  111 factor: constant
  112       | variable
  113       | subroutinecall
  114       | LPAREN exprssion RPAREN
  115       | BANG factor

  116 variable: IDENT
  117         | IDENT arrayvar
  118         | IDENT arrayvar recvar
  119         | IDENT recvar

  120 arrayvar: LBRACK exprssion RBRACK
  121         | LBRACK avarcond

  122 avarcond: exprssion COMMA avarcond
  123         | %empty

  124 recvar: DOT variable
  125       | DOT variable recvar

  126 constant: ICONST
  127         | FCONST
  128         | TRUE
  129         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 7 13 18 27 30 39 46 55 67
    AMP (258) 33 35
    ASGN (259) 98
    BANG (260) 115
    COLON (261) 16 18 32 47 48 49 52 53 72 73
    COMMA (262) 19 34 48 50 70 86 88 122
    DAMP (263) 94
    DBAR (264) 90
    DIV (265) 110
    DOT (266) 124 125
    EQ (267) 20 65 67
    GE (268) 97
    GT (269) 96
    LBRACK (270) 24 120 121
    LE (271) 100
    LPAREN (272) 28 30 31 37 52 53 68 69 70 74 75 76 77 78 79 80 82 83 84 88 114
    LT (273) 101
    MINUS (274) 103 106
    NE (275) 99
    PLUS (276) 92 102 105
    RBRACK (277) 24 120
    RPAREN (278) 28 30 31 37 39 52 53 68 69 74 75 76 77 78 79 80 82 83 84 85 88 114
    SEMI (279) 36
    STAR (280) 109
    ARRAY (281) 24
    BEGINN (282) 10 11
    BOOL (283) 44
    ELSE (284) 81
    ELIF (285) 82 83
    END (286) 10 11 13 25 72 73 74 75 76 77 78 79 80
    FALSE (287) 129
    FOR (288) 72 73
    FLOAT (289) 43
    FUNCTION (290) 52 53
    IF (291) 76 77 78 79 80
    IN (292) 72 73
    INT (293) 42
    OF (294) 24
    PROCEDURE (295) 28 30 31 37
    PROGRAM (296) 1 3
    READ (297) 88
    RECORD (298) 25
    RETURN (299) 71
    THEN (300) 76 77 78 79 80 82 83
    TRUE (301) 128
    WHILE (302) 74 75
    WRITE (303) 84
    FCONST (304) 127
    ICONST (305) 23 47 48 91 126
    IDENT (306) 1 16 18 19 20 22 28 30 31 32 34 35 37 41 49 50 51 52 53 68 69 70 72 73 92 116 117 118 119
    SCONST (307) 84 85 88


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program (54)
        on left: 1 3
        on right: 0
    $@1 (55)
        on left: 2
        on right: 3
    decl_part (56)
        on left: 4 5 7 8 9
        on right: 1 3 5 7 8 9 28 30 31 37 39 46 52 53 55
    $@2 (57)
        on left: 6
        on right: 7
    body (58)
        on left: 10 11 13
        on right: 1 3 7 28 30 31 37 39 46 52 53 55
    $@3 (59)
        on left: 12
        on right: 13
    stat (60)
        on left: 14 15
        on right: 11 15 73 75 77 78 79 80 81 82 83
    varaibledecl (61)
        on left: 16 18 19 20
        on right: 5 19
    $@4 (62)
        on left: 17
        on right: 18
    TYPE (63)
        on left: 21 22 23 24 25 27
        on right: 16 18 20 24 27 49
    $@5 (64)
        on left: 26
        on right: 27
    procedure (65)
        on left: 28 30 31
        on right: 8
    $@6 (66)
        on left: 29
        on right: 30
    paramter (67)
        on left: 32 33 34 35 36 37 39
        on right: 31 33 34 35 36 37 39 52
    $@7 (68)
        on left: 38
        on right: 39
    parametertype (69)
        on left: 40 41
        on right: 32
    simpleType (70)
        on left: 42 43 44 46
        on right: 21 40 46 52 53 55
    $@8 (71)
        on left: 45
        on right: 46
    INDEX (72)
        on left: 47 48
        on right: 24 48
    fieldlist (73)
        on left: 49 50 51
        on right: 25 50 51
    function (74)
        on left: 52 53 55
        on right: 9 55
    $@9 (75)
        on left: 54
        on right: 55
    statement (76)
        on left: 56 57 58 59 60 61 62 63 64
        on right: 10 13 15 72 73 74 75 76 77
    assignment (77)
        on left: 65 67
        on right: 57
    $@10 (78)
        on left: 66
        on right: 67
    subroutinecall (79)
        on left: 68 69 70
        on right: 58 70 113
    return (80)
        on left: 71
        on right: 59
    for (81)
        on left: 72 73
        on right: 60
    while (82)
        on left: 74 75
        on right: 61
    if (83)
        on left: 76 77 78 79 80
        on right: 62
    else (84)
        on left: 81
        on right: 79 80
    elif (85)
        on left: 82 83
        on right: 78 80 83
    write (86)
        on left: 84 85
        on right: 64 85
    exprloop (87)
        on left: 86 87
        on right: 85 86 88
    read (88)
        on left: 88
        on right: 63
    exprssion (89)
        on left: 89 90 91 92
        on right: 65 67 69 70 71 72 73 74 75 76 77 78 79 80 82 83 86 114 120 122
    and (90)
        on left: 93 94
        on right: 89 90
    logic (91)
        on left: 95 96 97 98 99 100 101
        on right: 93 94
    simple (92)
        on left: 102 103 104
        on right: 95 96 97 98 99 100 101 104
    condition (93)
        on left: 105 106
        on right: 104 106
    term (94)
        on left: 107 108
        on right: 102 103 106
    termcond (95)
        on left: 109 110
        on right: 108
    factor (96)
        on left: 111 112 113 114 115
        on right: 107 108 109 110 115
    variable (97)
        on left: 116 117 118 119
        on right: 65 67 112 124 125
    arrayvar (98)
        on left: 120 121
        on right: 117 118
    avarcond (99)
        on left: 122 123
        on right: 121 122
    recvar (100)
        on left: 124 125
        on right: 118 119 125
    constant (101)
        on left: 126 127 128 129
        on right: 111


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . IDENT decl_part body
    3        | PROGRAM . error $@1 decl_part body

    error  shift, and go to state 3
    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    3 program: PROGRAM error . $@1 decl_part body

    $default  reduce using rule 2 ($@1)

    $@1  go to state 6


State 4

    1 program: PROGRAM IDENT . decl_part body

    FUNCTION   shift, and go to state 7
    PROCEDURE  shift, and go to state 8
    IDENT      shift, and go to state 9

    $default  reduce using rule 4 (decl_part)

    decl_part     go to state 10
    varaibledecl  go to state 11
    procedure     go to state 12
    function      go to state 13


State 5

    0 $accept: program $end .

    $default  accept


State 6

    3 program: PROGRAM error $@1 . decl_part body

    FUNCTION   shift, and go to state 7
    PROCEDURE  shift, and go to state 8
    IDENT      shift, and go to state 9

    $default  reduce using rule 4 (decl_part)

    decl_part     go to state 14
    varaibledecl  go to state 11
    procedure     go to state 12
    function      go to state 13


State 7

   52 function: FUNCTION . IDENT LPAREN paramter RPAREN COLON simpleType decl_part body
   53         | FUNCTION . IDENT LPAREN RPAREN COLON simpleType decl_part body

    IDENT  shift, and go to state 15


State 8

   28 procedure: PROCEDURE . IDENT LPAREN RPAREN decl_part body
   30          | PROCEDURE . IDENT LPAREN error $@6 RPAREN decl_part body
   31          | PROCEDURE . IDENT LPAREN paramter RPAREN decl_part body

    IDENT  shift, and go to state 16


State 9

   16 varaibledecl: IDENT . COLON TYPE
   18             | IDENT . error $@4 COLON TYPE
   19             | IDENT . COMMA varaibledecl
   20             | IDENT . EQ TYPE

    error  shift, and go to state 17
    COLON  shift, and go to state 18
    COMMA  shift, and go to state 19
    EQ     shift, and go to state 20


State 10

    1 program: PROGRAM IDENT decl_part . body
    7 decl_part: decl_part . error $@2 decl_part body

    error   shift, and go to state 21
    BEGINN  shift, and go to state 22

    body  go to state 23


State 11

    5 decl_part: varaibledecl . decl_part

    FUNCTION   shift, and go to state 7
    PROCEDURE  shift, and go to state 8
    IDENT      shift, and go to state 9

    $default  reduce using rule 4 (decl_part)

    decl_part     go to state 24
    varaibledecl  go to state 11
    procedure     go to state 12
    function      go to state 13


State 12

    8 decl_part: procedure . decl_part

    FUNCTION   shift, and go to state 7
    PROCEDURE  shift, and go to state 8
    IDENT      shift, and go to state 9

    $default  reduce using rule 4 (decl_part)

    decl_part     go to state 25
    varaibledecl  go to state 11
    procedure     go to state 12
    function      go to state 13


State 13

    9 decl_part: function . decl_part
   55 function: function . error $@9 simpleType decl_part body

    error      shift, and go to state 26
    FUNCTION   shift, and go to state 7
    PROCEDURE  shift, and go to state 8
    IDENT      shift, and go to state 9

    error   [reduce using rule 4 (decl_part)]
    BEGINN  reduce using rule 4 (decl_part)

    decl_part     go to state 27
    varaibledecl  go to state 11
    procedure     go to state 12
    function      go to state 13


State 14

    3 program: PROGRAM error $@1 decl_part . body
    7 decl_part: decl_part . error $@2 decl_part body

    error   shift, and go to state 21
    BEGINN  shift, and go to state 22

    body  go to state 28


State 15

   52 function: FUNCTION IDENT . LPAREN paramter RPAREN COLON simpleType decl_part body
   53         | FUNCTION IDENT . LPAREN RPAREN COLON simpleType decl_part body

    LPAREN  shift, and go to state 29


State 16

   28 procedure: PROCEDURE IDENT . LPAREN RPAREN decl_part body
   30          | PROCEDURE IDENT . LPAREN error $@6 RPAREN decl_part body
   31          | PROCEDURE IDENT . LPAREN paramter RPAREN decl_part body

    LPAREN  shift, and go to state 30


State 17

   18 varaibledecl: IDENT error . $@4 COLON TYPE

    $default  reduce using rule 17 ($@4)

    $@4  go to state 31


State 18

   16 varaibledecl: IDENT COLON . TYPE

    ARRAY   shift, and go to state 32
    BOOL    shift, and go to state 33
    FLOAT   shift, and go to state 34
    INT     shift, and go to state 35
    RECORD  shift, and go to state 36
    ICONST  shift, and go to state 37
    IDENT   shift, and go to state 38

    TYPE        go to state 39
    simpleType  go to state 40


State 19

   19 varaibledecl: IDENT COMMA . varaibledecl

    IDENT  shift, and go to state 9

    varaibledecl  go to state 41


State 20

   20 varaibledecl: IDENT EQ . TYPE

    ARRAY   shift, and go to state 32
    BOOL    shift, and go to state 33
    FLOAT   shift, and go to state 34
    INT     shift, and go to state 35
    RECORD  shift, and go to state 36
    ICONST  shift, and go to state 37
    IDENT   shift, and go to state 38

    TYPE        go to state 42
    simpleType  go to state 40


State 21

    7 decl_part: decl_part error . $@2 decl_part body
   13 body: error . $@3 statement END

    error      reduce using rule 6 ($@2)
    BEGINN     reduce using rule 6 ($@2)
    FUNCTION   reduce using rule 6 ($@2)
    PROCEDURE  reduce using rule 6 ($@2)
    IDENT      reduce using rule 6 ($@2)
    IDENT      [reduce using rule 12 ($@3)]
    $default   reduce using rule 12 ($@3)

    $@2  go to state 43
    $@3  go to state 44


State 22

   10 body: BEGINN . statement END
   11     | BEGINN . stat END

    FOR     shift, and go to state 45
    IF      shift, and go to state 46
    READ    shift, and go to state 47
    RETURN  shift, and go to state 48
    WHILE   shift, and go to state 49
    WRITE   shift, and go to state 50
    IDENT   shift, and go to state 51

    END       reduce using rule 14 (stat)
    END       [reduce using rule 56 (statement)]
    FOR       [reduce using rule 56 (statement)]
    IF        [reduce using rule 56 (statement)]
    READ      [reduce using rule 56 (statement)]
    RETURN    [reduce using rule 56 (statement)]
    WHILE     [reduce using rule 56 (statement)]
    WRITE     [reduce using rule 56 (statement)]
    IDENT     [reduce using rule 56 (statement)]
    $default  reduce using rule 14 (stat)

    stat            go to state 52
    statement       go to state 53
    assignment      go to state 54
    subroutinecall  go to state 55
    return          go to state 56
    for             go to state 57
    while           go to state 58
    if              go to state 59
    write           go to state 60
    read            go to state 61
    variable        go to state 62


State 23

    1 program: PROGRAM IDENT decl_part body .

    $default  reduce using rule 1 (program)


State 24

    5 decl_part: varaibledecl decl_part .
    7          | decl_part . error $@2 decl_part body

    error  shift, and go to state 63

    error   [reduce using rule 5 (decl_part)]
    BEGINN  reduce using rule 5 (decl_part)


State 25

    7 decl_part: decl_part . error $@2 decl_part body
    8          | procedure decl_part .

    error  shift, and go to state 63

    error   [reduce using rule 8 (decl_part)]
    BEGINN  reduce using rule 8 (decl_part)


State 26

   55 function: function error . $@9 simpleType decl_part body

    $default  reduce using rule 54 ($@9)

    $@9  go to state 64


State 27

    7 decl_part: decl_part . error $@2 decl_part body
    9          | function decl_part .

    error  shift, and go to state 63

    error   [reduce using rule 9 (decl_part)]
    BEGINN  reduce using rule 9 (decl_part)


State 28

    3 program: PROGRAM error $@1 decl_part body .

    $default  reduce using rule 3 (program)


State 29

   52 function: FUNCTION IDENT LPAREN . paramter RPAREN COLON simpleType decl_part body
   53         | FUNCTION IDENT LPAREN . RPAREN COLON simpleType decl_part body

    AMP        shift, and go to state 65
    RPAREN     shift, and go to state 66
    PROCEDURE  shift, and go to state 67
    IDENT      shift, and go to state 68

    paramter  go to state 69


State 30

   28 procedure: PROCEDURE IDENT LPAREN . RPAREN decl_part body
   30          | PROCEDURE IDENT LPAREN . error $@6 RPAREN decl_part body
   31          | PROCEDURE IDENT LPAREN . paramter RPAREN decl_part body

    error      shift, and go to state 70
    AMP        shift, and go to state 65
    RPAREN     shift, and go to state 71
    PROCEDURE  shift, and go to state 67
    IDENT      shift, and go to state 68

    paramter  go to state 72


State 31

   18 varaibledecl: IDENT error $@4 . COLON TYPE

    COLON  shift, and go to state 73


State 32

   24 TYPE: ARRAY . LBRACK INDEX RBRACK OF TYPE

    LBRACK  shift, and go to state 74


State 33

   44 simpleType: BOOL .

    $default  reduce using rule 44 (simpleType)


State 34

   43 simpleType: FLOAT .

    $default  reduce using rule 43 (simpleType)


State 35

   42 simpleType: INT .

    $default  reduce using rule 42 (simpleType)


State 36

   25 TYPE: RECORD . fieldlist END

    IDENT  shift, and go to state 75

    fieldlist  go to state 76


State 37

   23 TYPE: ICONST .

    $default  reduce using rule 23 (TYPE)


State 38

   22 TYPE: IDENT .

    $default  reduce using rule 22 (TYPE)


State 39

   16 varaibledecl: IDENT COLON TYPE .
   27 TYPE: TYPE . error $@5 TYPE

    error  shift, and go to state 77

    error      [reduce using rule 16 (varaibledecl)]
    BEGINN     reduce using rule 16 (varaibledecl)
    FUNCTION   reduce using rule 16 (varaibledecl)
    PROCEDURE  reduce using rule 16 (varaibledecl)
    IDENT      reduce using rule 16 (varaibledecl)


State 40

   21 TYPE: simpleType .
   46 simpleType: simpleType . error $@8 decl_part body

    error  shift, and go to state 78

    error      [reduce using rule 21 (TYPE)]
    BEGINN     reduce using rule 21 (TYPE)
    END        reduce using rule 21 (TYPE)
    FUNCTION   reduce using rule 21 (TYPE)
    PROCEDURE  reduce using rule 21 (TYPE)
    IDENT      reduce using rule 21 (TYPE)


State 41

   19 varaibledecl: IDENT COMMA varaibledecl .

    $default  reduce using rule 19 (varaibledecl)


State 42

   20 varaibledecl: IDENT EQ TYPE .
   27 TYPE: TYPE . error $@5 TYPE

    error  shift, and go to state 77

    error      [reduce using rule 20 (varaibledecl)]
    BEGINN     reduce using rule 20 (varaibledecl)
    FUNCTION   reduce using rule 20 (varaibledecl)
    PROCEDURE  reduce using rule 20 (varaibledecl)
    IDENT      reduce using rule 20 (varaibledecl)


State 43

    7 decl_part: decl_part error $@2 . decl_part body

    FUNCTION   shift, and go to state 7
    PROCEDURE  shift, and go to state 8
    IDENT      shift, and go to state 9

    $default  reduce using rule 4 (decl_part)

    decl_part     go to state 79
    varaibledecl  go to state 11
    procedure     go to state 12
    function      go to state 13


State 44

   13 body: error $@3 . statement END

    FOR     shift, and go to state 45
    IF      shift, and go to state 46
    READ    shift, and go to state 47
    RETURN  shift, and go to state 48
    WHILE   shift, and go to state 49
    WRITE   shift, and go to state 50
    IDENT   shift, and go to state 51

    $default  reduce using rule 56 (statement)

    statement       go to state 80
    assignment      go to state 54
    subroutinecall  go to state 55
    return          go to state 56
    for             go to state 57
    while           go to state 58
    if              go to state 59
    write           go to state 60
    read            go to state 61
    variable        go to state 62


State 45

   72 for: FOR . IDENT IN exprssion COLON exprssion statement END
   73    | FOR . IDENT IN exprssion COLON exprssion statement stat END

    IDENT  shift, and go to state 81


State 46

   76 if: IF . LPAREN exprssion RPAREN THEN statement END
   77   | IF . LPAREN exprssion RPAREN THEN statement stat END
   78   | IF . LPAREN exprssion RPAREN THEN stat elif END
   79   | IF . LPAREN exprssion RPAREN THEN stat else END
   80   | IF . LPAREN exprssion RPAREN THEN stat elif else END

    LPAREN  shift, and go to state 82


State 47

   88 read: READ . LPAREN SCONST COMMA exprloop RPAREN

    LPAREN  shift, and go to state 83


State 48

   71 return: RETURN . exprssion

    MINUS   shift, and go to state 84
    PLUS    shift, and go to state 85
    ICONST  shift, and go to state 86
    IDENT   shift, and go to state 87

    exprssion  go to state 88
    and        go to state 89
    logic      go to state 90
    simple     go to state 91


State 49

   74 while: WHILE . LPAREN exprssion RPAREN statement END
   75      | WHILE . LPAREN exprssion RPAREN statement stat END

    LPAREN  shift, and go to state 92


State 50

   84 write: WRITE . LPAREN SCONST RPAREN

    LPAREN  shift, and go to state 93


State 51

   68 subroutinecall: IDENT . LPAREN RPAREN
   69               | IDENT . LPAREN exprssion RPAREN
   70               | IDENT . LPAREN exprssion COMMA subroutinecall
  116 variable: IDENT .
  117         | IDENT . arrayvar
  118         | IDENT . arrayvar recvar
  119         | IDENT . recvar

    DOT     shift, and go to state 94
    LBRACK  shift, and go to state 95
    LPAREN  shift, and go to state 96

    $default  reduce using rule 116 (variable)

    arrayvar  go to state 97
    recvar    go to state 98


State 52

   11 body: BEGINN stat . END

    END  shift, and go to state 99


State 53

   10 body: BEGINN statement . END
   15 stat: statement . stat

    END     shift, and go to state 100
    FOR     shift, and go to state 45
    IF      shift, and go to state 46
    READ    shift, and go to state 47
    RETURN  shift, and go to state 48
    WHILE   shift, and go to state 49
    WRITE   shift, and go to state 50
    IDENT   shift, and go to state 51

    END     [reduce using rule 14 (stat)]
    END     [reduce using rule 56 (statement)]
    FOR     [reduce using rule 56 (statement)]
    IF      [reduce using rule 56 (statement)]
    READ    [reduce using rule 56 (statement)]
    RETURN  [reduce using rule 56 (statement)]
    WHILE   [reduce using rule 56 (statement)]
    WRITE   [reduce using rule 56 (statement)]
    IDENT   [reduce using rule 56 (statement)]

    stat            go to state 101
    statement       go to state 102
    assignment      go to state 54
    subroutinecall  go to state 55
    return          go to state 56
    for             go to state 57
    while           go to state 58
    if              go to state 59
    write           go to state 60
    read            go to state 61
    variable        go to state 62


State 54

   57 statement: assignment .

    $default  reduce using rule 57 (statement)


State 55

   58 statement: subroutinecall .

    $default  reduce using rule 58 (statement)


State 56

   59 statement: return .

    $default  reduce using rule 59 (statement)


State 57

   60 statement: for .

    $default  reduce using rule 60 (statement)


State 58

   61 statement: while .

    $default  reduce using rule 61 (statement)


State 59

   62 statement: if .
